# vulkan-compute-playground

./: .clang-format  CMakeLists.txt  README.md  main.cpp  miner.cpp  sha256-miner.comp  sha256.c  sha256.comp  sha256.cpp  sha256.h  simple.comp  simple.cpp  vc.cpp  vc.h  vc.hpp
